--- a/vue/package.json
+++ b/vue/package.json
@@ -7,7 +7,7 @@
     "@starport/vue": "^0.3.10",
     "@starport/vuex": "^0.3.10",
     "buffer": "^6.0.3",
-    "cfeev-client-ts": "file:../ts-client",
+    "github.com/chain4energy/cfeev-client-ts": "file:../ts-client",
     "core-js": "^3.18.2",
     "vue": "^3.2.6",
     "vue-router": "^4.0.3",
